Alternative approach to inject 'requires transitive java.base;'